--- a/project.cabal
+++ b/project.cabal
@@ -61,13 +61,16 @@ executable project
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    Parser
+                      Datatypes
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0
+    build-depends:    base ^>=4.18.3.0,
+                      text,
+                      megaparsec >=9.0,
 
     -- Directories containing source files.
     hs-source-dirs:   app
