--- a/project.cabal
+++ b/project.cabal
@@ -63,6 +63,7 @@ executable project
     -- Modules included in this executable, other than Main.
     other-modules:    Parser
                       Datatypes
+                      Renamer
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -71,6 +72,7 @@ executable project
     build-depends:    base ^>=4.18.3.0,
                       text,
                       megaparsec >=9.0,
+                      containers,
 
     -- Directories containing source files.
     hs-source-dirs:   app
