--- a/project.cabal
+++ b/project.cabal
@@ -64,7 +64,7 @@ executable project
     other-modules:    Parser
                       Datatypes
                       Renamer
-                      CNF_Converter
+                      ClausalFormConverter
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
