--- a/project.cabal
+++ b/project.cabal
@@ -65,6 +65,7 @@ executable project
                       Datatypes
                       Renamer
                       ClausalFormConverter
+                      NegationNormalForm
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
