Added MoveQuantifiers module
Added the module to move quantifiers to the front. It should work as intended, however I would like to do some further testing to guarantee that (such as examples from homework assignments).

--- a/project.cabal
+++ b/project.cabal
@@ -66,6 +66,7 @@ executable project
                       Renamer
                       ClausalFormConverter
                       NegationNormalForm
+                      MoveQuantifiers
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
