--- a/project.cabal
+++ b/project.cabal
@@ -68,6 +68,7 @@ executable project
                       NegationNormalForm
                       MoveQuantifiers
                       FreeVariables
+                      Skolemize
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
