--- a/project.cabal
+++ b/project.cabal
@@ -74,7 +74,7 @@ executable project
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.18.3.0,
+    build-depends:    base >=4.18 && <5,
                       text,
                       megaparsec >=9.0,
                       containers,
