--- a/project.cabal
+++ b/project.cabal
@@ -69,6 +69,7 @@ executable project
                       MoveQuantifiers
                       FreeVariables
                       Skolemize
+                      Resolution
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
