--- a/project.cabal
+++ b/project.cabal
@@ -70,6 +70,7 @@ executable project
                       FreeVariables
                       Skolemize
                       Resolution
+                      MGU
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
